# WoosterCalc

./: .gitignore  LICENSE.txt  pyproject.toml  ruff.toml
libs/common_libs/: pyproject.toml
libs/common_libs/src/common_libs/: __init__.py  colors.py  pydantic_pint.py  registries.py
src/woostercalc/: hot_tub.py
